cluster/kasten-io/netpol/allow-ingress-nginx.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-ingresscontroller
  namespace: kasten-io
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: "ingress-nginx"
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: "ingress-nginx"
